src/index.css
@import url('https://fonts.googleapis.com/css?family=Roboto');

/* Text Elements */
body {
  font-family: 'Roboto', sans-serif;
  font-size: 20px;
  margin: 0;
}

button {
  font-size: 24px;
  border-style: solid;
  border-width: 3px;
  background-color: #f0f1f3;
}

/* Layout Elements */

.container-grid.main-layout {
  background-color: #3d555d1a;
  min-height: 100vh;
}

.container-grid.layout-section {
  display: -webkit-box;
  display: -webkit-flex;
  display:    -moz-box;
  display: -ms-flexbox;
  display:         flex;
  padding: 10px;
  background-color: #fefafa;

  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -moz-box-pack: center;
  justify-content: center;
}

@supports (display: grid) {
  /* Layout Elements */

  .container-grid.main-layout {
    display: grid;
    background-image: none;
    background-attachment: scroll;
    background-position: left top;
    background-clip: border-box;
    background-origin: padding-box;
    background-size: 0 0;
    background-repeat: no-repeat;

    grid-template-areas: 'header' 'navigation' 'main' 'main' 'footer';
    grid-template-columns: 1fr;
    grid-template-rows: 80px 50px auto 120px 30px;
    grid-row-gap: 1px;
    grid-column-gap: 1px;
    background-blend-mode: normal;

  }

  .container-grid.layout-section {
    display: -webkit-box;
    display: -webkit-flex;
    display: -moz-box;
    display: -ms-flexbox;
    display: flex;
    background-color: #fff;

    padding: 0;
    grid-area: auto;
  }

  .container-grid.header {
    grid-area: header;
  }

  .container-grid.navigation {
    padding: 0;
    grid-area: navigation;
  }

  .container-grid.main {
    background-color: #fff;
    flex-direction: column;
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -moz-box-pack: start;
    justify-content: start;
    align-items: flex-start;
    grid-area: main;
  }

  .container-grid.footer {
    grid-area: footer;
  }

  .container-grid.header.layout-section {
    background-color: #fff;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    grid-area: header;
  }

  .container-grid.layout-section.navigation {
    padding-top: 15px;
    background-color: #fff;
    -ms-flex-pack: center;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -moz-box-pack: center;
    justify-content: center;
    grid-area: navigation;
  }

  .container-grid.layout-section.main {
    background-color: #fff;
    grid-area: main;
  }

  .container-grid.footer.layout-section {
    padding: 5px;
    background-color: #fff;
    grid-area: footer;
  }
  .container-grid.footer.layout-section h3 {
    font-size: 10px;
  }

}

@media screen and (min-width: 40rem) {
  @supports (display: grid) {
    /* Layout Elements */


    .container-grid.layout-section.main {
      min-height: 100px;
      grid-area: main;
    }
  }
}

@media screen and (min-width: 64rem) {
  @supports (display: grid) {
    /* Layout Elements */

    .container-grid.main-layout {
      grid-template-areas: '. header header header .' '. navigation main main .' '. navigation main main .' '. navigation main main .' '. footer footer footer .';
      grid-template-columns: 1fr 150px repeat(2 , 512px) 1.00fr;
      grid-template-rows: 85px 101px auto 420px 30px;
    }

    .container-grid.layout-section.navigation {
      padding-left: 15px;
      -ms-flex-pack: start;
      -webkit-box-pack: start;
      -webkit-justify-content: flex-start;
      -moz-box-pack: start;
      justify-content: start;
      grid-area: navigation;
    }

    .container-grid.layout-section.footer h3 {
      padding-left: 150px;
    }
  }
}

@media screen and (min-width: 90.625rem) {
  @supports (display: grid) {
    /* Layout Elements */

    .container-grid.layout-section.navigation {
      max-width: none;
    }

    .container-grid.main-layout {
      grid-template-columns: 1fr 150px repeat(2 , 600px) 1fr;
    }
  }
}

